Fix Dark theme toggle.

--- a/Src/To-Do.html
+++ b/Src/To-Do.html
@@ -15,7 +15,7 @@
 </head>
 <body class="font-josefin bg-slate-900">
   <!-- Background Section -->
-  <div class="banner bg-gradient-light  bg-gradient-dark bg-no-repeat flex justify-center items-center relative h-64">
+  <div class="banner bg-no-repeat flex justify-center items-center relative h-64">
     <div class="flex space-x-40 md:space-x-72 items-center mb-28">
       <h2 class="font-josefin text-3xl text-center text-white tracking-todo">TODO</h2>
       <div id="theme-icon">
@@ -63,6 +63,8 @@
     </div>
   </div>
 
-  <script src="../Src/To-Do.js"></script>
+  <script src="../Src/createTodoList.js"></script>
+  <script src="../Src/bgToggle.js"></script>
+  <script src="../Src/mobileResponsiveStyles.js"></script>
 </body>
 </html>
